<!-- plik ze tekstem który można zmieniać np. w zależności od wersji językowych -->


<resources>

    <!-- MainITPS -->
    <string name="title_activity_mainitps">KonfigIT - PS</string>
    <string name="powitanie">Panel administracyjny</string>
    <string name="button_tutorial_ok">Ok!</string>
    <string name="button_tutorial_anuluj">Anuluj</string>
    <string name="textview_1">Urządzenia - linki</string>
    <string name="textview_link1">http://5.185.122.9</string>

    <string name="app_name">BookWeb</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">NetworkConfigActivity</string>
    <string name="title_activity_main">MainActivity</string>


    <!-- networkconfig_activity -->
    <string name="nazwa_menu">Networkconfig Menu</string>

    <!-- ikona hamburgera, pojawi się w lewym górnym rogu Toolbara, po kliknięciu wysunie menu nawigacji -->
    <string name="navigation_drawer_open">Otwórz navigation drawer</string>
    <string name="navigation_drawer_close">Zamknij navigation drawer</string>


    <!-- menu nawigacyjne activity_home_drawer -->
    <string name="menutemp_a">Temperatura interfejs A</string>
    <string name="menutemp_b">Temperatura interfejs B</string>
    <string name="menuinne">Inne</string>

    <!-- menu pasek górny aktywności Home -->
    <string name="menu_gorne1">O programie</string>
    <string name="menu_gorne2">Skaner</string>
    <string name="menu_gorne3">Szukaj</string>

    <string name="link1">http://5.185.122.9</string>
    <string name="link2">http://5.185.122.9:8888</string>
    <string name="link3">http://5.185.122.9:8000</string>
    <string name="link4">http://5.185.122.9:8128</string>



    <string-array name="lista_linkow">
        <item>http://5.185.122.9</item>
        <item>http://5.185.122.9:8888</item>
        <item>http://5.185.122.9:8000</item>
        <item>http://5.185.122.9:8128</item>
    </string-array>



</resources>
